[gd_scene load_steps=7 format=3 uid="uid://c7t54asikdoa5"]

[ext_resource type="Script" uid="uid://cwoin4co3juul" path="res://UI/main_menu/main_menu.gd" id="1_tk8dj"]
[ext_resource type="LabelSettings" uid="uid://dwoqovdap52e3" path="res://UI/main_menu/MainTitleLabel.tres" id="2_d8nwk"]
[ext_resource type="Material" uid="uid://logqbogylr5y" path="res://UI/main_menu/TitleLabelMaterial.tres" id="2_lib8g"]
[ext_resource type="Theme" uid="uid://3p335jre7637" path="res://UI/main_menu/AtomiUITheme.tres" id="3_d8nwk"]
[ext_resource type="Material" uid="uid://biwucvgkq5623" path="res://UI/main_menu/ButtonLabelMaterial.tres" id="4_rxajg"]
[ext_resource type="AudioStream" uid="uid://bj304bktkpmdv" path="res://arts/audio/sounds/kenney_ui-audio/Audio/click2.ogg" id="5_f40uw"]

[node name="MainMenu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_tk8dj")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
material = ExtResource("2_lib8g")
layout_mode = 2
text = "Pattern Finder"
label_settings = ExtResource("2_d8nwk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.7

[node name="StartButton" type="Button" parent="HBoxContainer/ButtonContainer"]
unique_name_in_owner = true
material = ExtResource("4_rxajg")
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_d8nwk")
text = "Start"
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.7

[node name="ExitButton" type="Button" parent="HBoxContainer/ButtonContainer"]
unique_name_in_owner = true
material = ExtResource("4_rxajg")
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_d8nwk")
text = "Exit"

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.7

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UIAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_f40uw")

[node name="AtomicUITimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="button_down" from="HBoxContainer/ButtonContainer/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="focus_entered" from="HBoxContainer/ButtonContainer/StartButton" to="." method="_on_start_button_focus_entered"]
[connection signal="focus_entered" from="HBoxContainer/ButtonContainer/ExitButton" to="." method="_on_exit_button_focus_entered"]
[connection signal="pressed" from="HBoxContainer/ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="timeout" from="AtomicUITimer" to="." method="_on_atomic_ui_timer_timeout"]
